; ModuleID = '/home/carl/AnghaBench/git/compat/extr_mingw.c_mingw_connect.c'
source_filename = "/home/carl/AnghaBench/git/compat/extr_mingw.c_mingw_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mingw_connect(i32 %0, %struct.sockaddr* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockaddr*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.sockaddr* %1, %struct.sockaddr** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @_get_osfhandle(i32 %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @connect(i32 %10, %struct.sockaddr* %11, i64 %12)
  ret i32 %13
}

declare dso_local i32 @_get_osfhandle(i32) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
